--- a/web1/src/app/inventory/fitter/fitter.component.html
+++ b/web1/src/app/inventory/fitter/fitter.component.html
@@ -141,7 +141,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-2 col-12 ps-md-5">
-                                    <div class="row" *ngIf="companyData.PhotoClick == true">
+                                    <div class="row" *ngIf="companyData.PhotoClick == 'true'">
                                         <div class="col-10 mt-md-3 ">
                                             <img class="fit-picture" width="170" height="170" [src]="userImage">
                                         </div>
