--- a/web1/src/app/report/ledge-report/ledge-report.component.html
+++ b/web1/src/app/report/ledge-report/ledge-report.component.html
@@ -185,7 +185,7 @@
                     </div>
 
                     <!-- employee card  -->
-                    <div *ngIf="viewEmployeeLedgerReport && companyData.EmployeeCommission == true" class="card p-0">
+                    <div *ngIf="viewEmployeeLedgerReport && companyData.EmployeeCommission == 'true'" class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
@@ -245,7 +245,7 @@
                     </div>
 
                     <!-- doctor card  -->
-                    <div *ngIf="companySetting.DoctorLedgerReport == 'true' && viewDoctorLedgerReport && companyData.EmployeeCommission == true" class="card p-0">
+                    <div *ngIf="companySetting.DoctorLedgerReport == 'true' && viewDoctorLedgerReport && companyData.EmployeeCommission == 'true'" class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
