--- a/web1/src/app/admin/company-list.component.html
+++ b/web1/src/app/admin/company-list.component.html
@@ -83,7 +83,7 @@
                         <div class="body mt-md-1 mt-5 p-2">
                             <div class="row" *ngIf="gridview">
                                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                                    <div >
+                                    <div>
                                         <table style="width:100%;" id="exportsss"
                                             class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
@@ -124,15 +124,15 @@
                                                             style="background: rgb(66, 171, 192);">swap_vert</mat-icon>
 
                                                         <mat-icon class="detail_icons ms-1" title="edit"
-                                                        [routerLink]="['/admin/company',data.ID]">edit</mat-icon>
+                                                            [routerLink]="['/admin/company',data.ID]">edit</mat-icon>
 
                                                         <mat-icon class="delete_icon ms-1" title="Delete"
                                                             (click)="deleteItem(i)">delete_forever</mat-icon>
 
                                                         <i class="fas fa-info-circle ms-1" title="Detail"
-                                                        style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
-                                                        (click)="openModal(content,data)">
-                                                    </i>
+                                                            style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
+                                                            (click)="openModal(content,data)">
+                                                        </i>
                                                     </td>
                                                     <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{
                                                         dataList.length - i }}</td>
@@ -192,10 +192,10 @@
     </div>
     <div class="modal-body">
         <form #f="ngForm">
-              <div class="row">
-                 <div class="col-xl-6 col-12" >
+            <div class="row">
+                <div class="col-xl-6 col-12">
                     <h2 style="color: #1c1e5a;">Invoice Details </h2>
-                        <div style=" overflow: auto; height: 200px;">
+                    <div style=" overflow: auto; height: 200px;">
                         <table style="width:100%; " id="exportsss"
                             class="table table-striped table-hover table-sm table-bordered"
                             style="border: 2px solid #fff !important;">
@@ -206,23 +206,25 @@
                                     <th class="text-left">ShopName</th>
                                     <th class="text-left">Retail</th>
                                     <th class="text-left">Service</th>
+                                    <th class="text-left">Order</th>
                                     <th class="text-left">WholeSale</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr class="text-center" *ngFor="let inv of invoiceDetailsList  ; let i = index;">
-                                     <td>{{invoiceDetailsList.length - i}}</td>
-                                     <td>{{inv.CompanyName}}</td>
-                                     <td>{{inv.ShopName}}</td>
-                                     <td>{{inv.Retail}}</td>
-                                     <td>{{inv.Service}}</td>
-                                     <td>{{inv.WholeSale}}</td>
+                                    <td>{{invoiceDetailsList.length - i}}</td>
+                                    <td>{{inv.CompanyName}}</td>
+                                    <td>{{inv.ShopName}}</td>
+                                    <td>{{inv.Retail}}</td>
+                                    <td>{{inv.Service}}</td>
+                                    <td>{{inv.Order}}</td>
+                                    <td>{{inv.WholeSale}}</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
-                 </div>
-                 <div class="col-xl-6 col-12">
+                </div>
+                <div class="col-xl-6 col-12">
                     <h2 style="color: #1c1e5a;">Barcode Details </h2>
                     <div style=" overflow: auto; height: 200px;">
                         <table style="width:100%; " id="exportsss"
@@ -240,18 +242,18 @@
                             </thead>
                             <tbody>
                                 <tr class="text-center" *ngFor="let inv of barcodeDetailsList  ; let i = index;">
-                                     <td>{{barcodeDetailsList.length - i}}</td>
-                                     <td>{{inv.CompanyName}}</td>
-                                     <td>{{inv.ManualBarCode}}</td>
-                                     <td>{{inv.PreOrderBarCode}}</td>
-                                     <td>{{inv.StockBarCode}}</td>
-                                     <td>{{inv.CreatedOn}}</td>
+                                    <td>{{barcodeDetailsList.length - i}}</td>
+                                    <td>{{inv.CompanyName}}</td>
+                                    <td>{{inv.ManualBarCode}}</td>
+                                    <td>{{inv.PreOrderBarCode}}</td>
+                                    <td>{{inv.StockBarCode}}</td>
+                                    <td>{{inv.CreatedOn}}</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
-                 </div>
-              </div>
+                </div>
+            </div>
         </form>
 
         <form #fpr="ngForm">
@@ -259,94 +261,95 @@
                 <div class="col-xl-12 mb-0">
                     <h2 style="color:#ff5100; text-transform: capitalize;">
                         {{this.planData.planName}}
-                     </h2>
+                    </h2>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="PrimeMembership" color="primary"
-                        [(ngModel)]="planData.PrimeMembership" class="example-margin" #PrimeMembershipcontrol >
+                        [(ngModel)]="planData.PrimeMembership" class="example-margin" #PrimeMembershipcontrol>
                         PrimeMembership
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
-                    <mat-slide-toggle type="button" name="PhotoClick" color="primary"
-                    [(ngModel)]="planData.PhotoClick"  class="example-margin" #PhotoClickcontrol >
+                    <mat-slide-toggle type="button" name="PhotoClick" color="primary" [(ngModel)]="planData.PhotoClick"
+                        class="example-margin" #PhotoClickcontrol>
                         PhotoClick
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="CustomerCategory" color="primary"
-                    [(ngModel)]="planData.CustomerCategory"  class="example-margin" #CustomerCategorycontrol >
+                        [(ngModel)]="planData.CustomerCategory" class="example-margin" #CustomerCategorycontrol>
                         CustomerCategory
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="EmployeeCommission" color="primary"
-                    [(ngModel)]="planData.EmployeeCommission" class="example-margin" #EmployeeCommissioncontrol >
+                        [(ngModel)]="planData.EmployeeCommission" class="example-margin" #EmployeeCommissioncontrol>
                         EmployeeCommission
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="LoginHistory" color="primary"
-                    [(ngModel)]="planData.LoginHistory" class="example-margin" #LoginHistorycontrol >
+                        [(ngModel)]="planData.LoginHistory" class="example-margin" #LoginHistorycontrol>
                         LoginHistory
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="DiscountSetting" color="primary"
-                    [(ngModel)]="planData.DiscountSetting" class="example-margin" #DiscountSettingcontrol >
+                        [(ngModel)]="planData.DiscountSetting" class="example-margin" #DiscountSettingcontrol>
                         DiscountSetting
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
-                    <mat-slide-toggle type="button" name="Quotation" color="primary"
-                    [(ngModel)]="planData.Quotation" class="example-margin" #Quotationcontrol >
+                    <mat-slide-toggle type="button" name="Quotation" color="primary" [(ngModel)]="planData.Quotation"
+                        class="example-margin" #Quotationcontrol>
                         Quotation
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="ProductTransfer" color="primary"
-                    [(ngModel)]="planData.ProductTransfer" class="example-margin" #ProductTransfercontrol >
+                        [(ngModel)]="planData.ProductTransfer" class="example-margin" #ProductTransfercontrol>
                         ProductTransfer
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="BulkTransfer" color="primary"
-                    [(ngModel)]="planData.BulkTransfer" class="example-margin" #BulkTransfercontrol >
+                        [(ngModel)]="planData.BulkTransfer" class="example-margin" #BulkTransfercontrol>
                         BulkTransfer
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
-                    <mat-slide-toggle type="button" name="PettyCash" color="primary"
-                    [(ngModel)]="planData.PettyCash" class="example-margin" #PettyCashcontrol >
+                    <mat-slide-toggle type="button" name="PettyCash" color="primary" [(ngModel)]="planData.PettyCash"
+                        class="example-margin" #PettyCashcontrol>
                         PettyCash
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="LocationTracker" color="primary"
-                    [(ngModel)]="planData.LocationTracker" class="example-margin" #LocationTrackercontrol >
+                        [(ngModel)]="planData.LocationTracker" class="example-margin" #LocationTrackercontrol>
                         LocationTracker
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
-                    <mat-slide-toggle type="button" name="StockCheck" color="primary"
-                    [(ngModel)]="planData.StockCheck" class="example-margin" #StockCheckcontrol >
+                    <mat-slide-toggle type="button" name="StockCheck" color="primary" [(ngModel)]="planData.StockCheck"
+                        class="example-margin" #StockCheckcontrol>
                         StockCheck
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
-                    <mat-slide-toggle type="button" name="RecycleBin" color="primary"
-                    [(ngModel)]="planData.RecycleBin" class="example-margin" #RecycleBincontrol >
+                    <mat-slide-toggle type="button" name="RecycleBin" color="primary" [(ngModel)]="planData.RecycleBin"
+                        class="example-margin" #RecycleBincontrol>
                         RecycleBin
                     </mat-slide-toggle>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                     <mat-slide-toggle type="button" name="AllExcelImport" color="primary"
-                    [(ngModel)]="planData.AllExcelImport" class="example-margin" #AllExcelImportcontrol >
+                        [(ngModel)]="planData.AllExcelImport" class="example-margin" #AllExcelImportcontrol>
                         AllExcelImport
                     </mat-slide-toggle>
                 </div>
-                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
-                    <button class="ms-3 " type="button" mat-raised-button color="primary"     (click)="updateCompany()"  >Update</button>
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0">
+                    <button class="mt-3" type="button" mat-raised-button color="primary"
+                        (click)="updateCompany()">Update</button>
                 </div>
             </div>
         </form>
