--- a/web1/src/app/admin/employee/employee.component.html
+++ b/web1/src/app/admin/employee/employee.component.html
@@ -79,7 +79,7 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div *ngIf="companyData.EmployeeCommission == true" class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                                        <div *ngIf="companyData.EmployeeCommission == 'true'" class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field  class="example-full-width mb-0">
                                                 <mat-label>Loyalty Type</mat-label>
                                                 <mat-select id="CommissionType" type="number" name="CommissionType" [(ngModel)]="data.CommissionType"
@@ -268,7 +268,7 @@
                             </div>
                         </div>
 
-                        <div *ngIf="companyData.PhotoClick == true" class="row mb-3" style="margin: 0;">
+                        <div *ngIf="companyData.PhotoClick == 'true'" class="row mb-3" style="margin: 0;">
                             <div class="col-sm-12">
                                 <mat-label class="header" style="font-size: 1.25rem;">Upload Document: </mat-label>
                                 <button (click)="add()" mat-mini-fab class="ms-3 me-3 btn" color="primary"><i
