--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -307,7 +307,7 @@
                         </div>
                     </div>
                 </div>
-                <div *ngIf="companyData.PhotoClick == true" class="col-md-2 col-6">
+                <div *ngIf="companyData.PhotoClick == 'true'" class="col-md-2 col-6">
                     <div class="row ">
                         <div class="col-10 mt-md-3 ">
                             <img class="fit-picture" width="170" height="170" [src]="companyImage">
