--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1992,7 +1992,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="row" *ngIf="company.PrimeMembership == true">
+                                                <div class="row" *ngIf="company.PrimeMembership == 'true'">
                                                     <div id="membershipCard" class="col-6"
                                                         style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                         <div class="row pt-2" style="border-radius: 4px;">
@@ -2094,7 +2094,7 @@
                                                     </div>
 
                                                       <div class="col-md-5 col-12 ms-md-auto">
-                                                <div *ngIf="company.PhotoClick == true" class="row ">
+                                                <div *ngIf="company.PhotoClick == 'true'" class="row ">
                                                     <div class="col-10 mt-md-0 ">
                                                         <img class="fit-picture" width="170" height="100"
                                                             [src]="customerImage">
@@ -2112,7 +2112,7 @@
                                                 </div>
                                             </div> 
 
-                                                    <div *ngIf="company.PrimeMembership == true" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
+                                                    <div *ngIf="company.PrimeMembership == 'true'" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
                                                     margin: 0px;">
                                                         <div class="table-responsive">
                                                             <table
@@ -2254,7 +2254,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-2 col-12 ms-md-auto">
-                                                <div *ngIf="company.PhotoClick == true" class="row ">
+                                                <div *ngIf="company.PhotoClick == 'true'" class="row ">
                                                     <div class="col-10 mt-md-3 ">
                                                         <img class="fit-picture" width="170" height="170"
                                                             [src]="spectacleImage">
@@ -2386,7 +2386,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-2 col-12 ms-md-auto">
-                                                <div *ngIf="company.PhotoClick == true" class="row ">
+                                                <div *ngIf="company.PhotoClick == 'true'" class="row ">
                                                     <div class="col-10 mt-md-3 ">
                                                         <img class="fit-picture" width="170" height="170"
                                                             [src]="clensImage">
@@ -2784,7 +2784,7 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="row" *ngIf="company.PrimeMembership == true">
+                                                    <div class="row" *ngIf="company.PrimeMembership == 'true'">
                                                         <div id="membershipCard" class="col-6"
                                                             style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                             <div class="row pt-2" style="border-radius: 4px;">
@@ -2885,7 +2885,7 @@
                                                              </textarea>
                                                         </div>
                                                         <div class="col-md-5 col-12 ms-md-auto">
-                                                            <div *ngIf="company.PhotoClick == true" class="row ">
+                                                            <div *ngIf="company.PhotoClick == 'true'" class="row ">
                                                                 <div class="col-10 mt-md-0 ">
                                                                     <img class="fit-picture" width="170" height="100"
                                                                         [src]="customerImage">
@@ -2902,7 +2902,7 @@
                                                                 </div>
                                                             </div>
                                                         </div> 
-                                                        <div *ngIf="company.PrimeMembership == true" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
+                                                        <div *ngIf="company.PrimeMembership == 'true'" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
                                                         margin: 0px;">
                                                             <div class="table-responsive">
                                                                 <table
@@ -3278,7 +3278,7 @@
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
-                                                <div class="row" *ngIf="company.PrimeMembership == true">
+                                                <div class="row" *ngIf="company.PrimeMembership == 'true'">
                                                     <div id="membershipCard" class="col-6"
                                                         style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                         <div class="row pt-2" style="border-radius: 4px;">
@@ -3379,7 +3379,7 @@
                                                          </textarea>
                                                     </div>
                                                     <div class="col-md-5 col-12 ms-md-auto">
-                                                        <div *ngIf="company.PhotoClick == true" class="row ">
+                                                        <div *ngIf="company.PhotoClick == 'true'" class="row ">
                                                             <div class="col-10 mt-md-0 ">
                                                                 <img class="fit-picture" width="170" height="100"
                                                                     [src]="customerImage">
@@ -3396,7 +3396,7 @@
                                                             </div>
                                                         </div>
                                                     </div> 
-                                                    <div *ngIf="company.PrimeMembership == true" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
+                                                    <div *ngIf="company.PrimeMembership == 'true'" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
                                                     margin: 0px;">
                                                         <div class="table-responsive">
                                                             <table
