--- a/web1/src/app/sale/doctor/doctor.component.html
+++ b/web1/src/app/sale/doctor/doctor.component.html
@@ -122,7 +122,7 @@
                                                 <mat-error>Doctors type is required</mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div *ngIf="companyData.EmployeeCommission == true" class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
+                                        <div *ngIf="companyData.EmployeeCommission == 'true'" class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Loyalty Type</mat-label>
                                                 <mat-select name="CommissionType" [(ngModel)]="data.CommissionType"
@@ -195,7 +195,7 @@
                                             [routerLink]="['/sale/doctorList']">Back</button>
                                     </div>
                                 </div>
-                                <div class="col-sm-2 col-12" *ngIf="companyData.PhotoClick == true">
+                                <div class="col-sm-2 col-12" *ngIf="companyData.PhotoClick == 'true'">
                                     <div class="row">
                                         <div class="col-10 mt-md-3 ">
                                             <img class="fit-picture" width="170" height="170" [src]="userImage">
