--- a/sperated_db_api/views/barcode.ejs
+++ b/sperated_db_api/views/barcode.ejs
@@ -104,14 +104,18 @@
  
                 <tr>
                     <th  style="width: 140px; padding: 0;">
-                        <div
-                            style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                        <div  <% %> 
+                            style="font-size:<%= data.barcodeNameFontSize %>; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                             <%=i.BarcodeName%>
                         </div>
                         <div>
-                            <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
-                                jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
-                                jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                            <svg <% %>  class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                jsbarcode-textmargin="0" 
+                                jsbarcode-fontSize=<%= data.barFontSize %>
+                                jsbarcode-height=<%= data.barHeight %>
+                                jsbarcode-marginTop=<%= data.barMarginTop %>
+                                jsbarcode-marginBottom="0" 
+                                jsbarcode-width=<%= data.barWidth %>
                                 jsbarcode-fontoptions="bold">
                             </svg>
                             <script>
@@ -121,8 +125,8 @@
                     </th>
                     <th  style="width: 220px;">
 <% if (data.MRPHide == 'true'){%>
-                        <div
-                            style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
+                        <div <% %>
+                            style="text-align: left; font-size:<%= data.mrpFontSize %>; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
                             <% if (data.CompanyID != 2){%>
                                        MRP  <%=i.RetailPrice%>    
                               <%}%>
@@ -131,14 +135,14 @@
                               <%}%>            
                         </div>
  <%}%> 
-                        <div
-                            style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
+                        <div <% %>
+                            style="text-align: left; font-size:<%= data.incTaxFontSize %>; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
                               <% if (data.CompanyID !== 2){%>
                                 (Inc. of all Taxes) 
                       		 <%}%>
 			 </div>
-                        <div
-                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                        <div <% %>
+                            style="text-align: left; font-size:<%= data.productBrandFontSize %>; font-weight: 600; font-family: verdana;margin-left: 18px;">
                               <% if (data.CompanyID !== 63 && data.CompanyID !== 153 && data.CompanyID !== 320){%>
                                  <%=i.ProductBrandName%>
                             <%}%>
@@ -146,8 +150,8 @@
                                 <%=i.ProductUniqueBarcode%>
                             <%}%>
                         </div>
-                        <div
-                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                        <div <% %>
+                            style="text-align: left;  font-size:<%= data.productModelFontSize %>; font-weight: 600; font-family: verdana;margin-left: 18px;">
                             <%=i.ProductModelName%>
                         </div>
                     </th>
