--- a/sperated_db_api/views/invoice_Box.ejs
+++ b/sperated_db_api/views/invoice_Box.ejs
@@ -692,7 +692,7 @@
 
             <!-- improtant note billtotal start -->
             <section >
-                <div class="billTotalRow" style="border: 1px solid #000; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: 1%; position: relative; ">
+                <div class="billTotalRow" style="border: 1px solid #000; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: .5%; position: relative; ">
                     <% if (data.Signature != 'http://localhost:3000/null' && data.Signature != 'http://localhost:3000/undefined'){%>
                         <img src="<%= data.Signature %>" alt="Signature" style="width: 100px;position:absolute; left: 55%;top: 10%;">
                         <%}%>
@@ -711,6 +711,7 @@
                                  <b <% %> style="color: red; font-size:<%= data.NoteFont %>">Note -</b>   Composition Taxable person, Not eligible to collect tax on supplies.
                                 </p>
                              <%}%>
+                             <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0; padding-top:10px;"> <%= data.shopdetails.ShopTiming %>  </h4> 
                     </div>
                     <div class="col2">
                         <% if ( data.bill==='Tax Invoice' ){%>
@@ -723,6 +724,11 @@
                                 <tr style="height: 40px !important; font-size: 20px ;">
                                     <th>Due Amount:-</th>
                                     <th style="text-align: right">   <%= data.CurrentInvoiceBalance %></th>
+                                </tr>
+                                <tr>
+                                    <th colspan="2"
+                                    <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>; border: 1px solid <%= data.Color %>; padding: 0px; margin:0px "> You've Saved <%=data.SavedDiscount%> <% if (data.companysetting.CompanyID == 19 ){%> AED <%}%> <% if (data.shopdetails.CompanyID != 19 ){%> Rs <%}%> on this Invoice!
+                                </th>
                                 </tr>
                             </thead>
                         </table>
