--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3023,7 +3023,74 @@
                                     </div>
                                 </div>
                             </mat-tab>
+                           
                         </div>
+                        <mat-tab  label="Sale Register" style="color: red;
+                        opacity: 1;
+                        font-weight: bolder;">
+                            <div class="body">
+                                <form class="p-3 pb-0" #fr="ngForm" (ngSubmit)="getRegisterSale()">
+                                    <div class="row">
+                                        <div  class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                            <mat-form-field class="example-full-width mb-0">
+                                              <mat-label>From</mat-label>
+                                              <input matInput name="FromDate" type="month" [(ngModel)]="dataRegister.FromDate" #Fromcontrol>
+                                            </mat-form-field>
+                                          </div>
+                                          <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                            <mat-form-field class="example-full-width mb-0">
+                                              <mat-label>To</mat-label>
+                                              <input matInput name="ToDate" type="month" [(ngModel)]="dataRegister.ToDate"
+                                                 #Fromcontrol>
+                                            </mat-form-field>
+                                          </div>
+                                          <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
+                                            <button  type="submit" mat-raised-button color="primary" [disabled]="!fr.valid ">
+                                                 Search
+                                            </button>
+                                            <button class="me-3 ms-3" type="button" mat-raised-button color="warn" >
+                                                Reset
+                                            </button>
+                                          </div>
+                                     </div>
+                                  </form>
+                                  <div class="body p-2">
+                                    <div id="ProductExpiry-content" class="col-sm-12"
+                                        style="overflow: auto; height: 450px;">
+                                        <table class="table table-striped table-hover table-sm table-bordered"
+                                            style="border: 2px solid #fff !important;" id="saleExpiryExcel">
+                                            <thead>
+                                                <tr class="text-center" style="white-space: normal;">
+                                                    <th>S.No</th>
+                                                    <th>Month </th>
+                                                    <th>Amount</th>
+                                                    <th>Paid</th>
+                                                    <th>Balance</th>
+                                                </tr>
+                                                <tr class="totolRow" *ngIf="this.RegisterList != null && this.RegisterList != ''">
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td>{{this.RegisterAmount}}</td>
+                                                    <td>{{this.RegisterPaid}}</td>
+                                                    <td>{{this.RegisterBalance}}</td>
+                                                   
+                                                </tr>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr *ngFor="let data of RegisterList; let i = index" text="left">
+                                                    <td>{{ i + 1 }}</td>
+                                                    <td>{{data.MonthYear}}</td>
+                                                    <td>{{data.Amount}}</td>
+                                                    <td>{{data.Paid}}</td>
+                                                    <td>{{data.Balance}}</td>
+                                                    
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                </div>        
+                        </mat-tab>
                         </mat-tab-group>
                     </div>
                 </div>
