--- a/digi/web/src/app/common/login.component.html
+++ b/digi/web/src/app/common/login.component.html
@@ -41,10 +41,10 @@
             <button class="logibtn" >Login</button>
               <div class="col-md-12 col-12">
                 <ul class="social-network social-circle">
-                  <li><a href="https://www.facebook.com/relinksys" target="_blank" class="icoFacebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
-                  <li><a href="https://www.facebook.com/Bestopticalsoftware" target="_blank" class="icoFacebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
-                  <li><a href="https://www.instagram.com/relinksys/" target="_blank" class="icoTwitter" title="instagram"><i class="fa-brands fa-instagram"></i></a></li>
-                  <li><a href="https://www.google.com/search?q=relinksys&oq=re&aqs=chrome.0.69i59j69i57j35i39j46i131i199i395i424i433i465i466i512j0i131i433i512j69i60l3.3353j1j7&sourceid=chrome&ie=UTF-8#lrd=0x3bc295125130924d:0xab6c453ce1a3efec,1,,," target="_blank" class="icoGoogle" title="Google +"><i class="fa-brands fa-google-plus"></i></a></li>
+                  <li><a href="" target="_blank" class="icoFacebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                  <li><a href="" target="_blank" class="icoFacebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                  <li><a href="" target="_blank" class="icoTwitter" title="instagram"><i class="fa-brands fa-instagram"></i></a></li>
+                  <li><a href="" target="_blank" class="icoGoogle" title="Google +"><i class="fa-brands fa-google-plus"></i></a></li>
                 </ul>
               </div>
             </form>
