--- a/digi/web/src/app/common/page404.component.html
+++ b/digi/web/src/app/common/page404.component.html
@@ -11,17 +11,17 @@
       <div class="message-box">
         <h1>This is not an Error !</h1>
         <p style="font-size: clamp(15px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px;line-height: 30px;">
-          Message from OPTICALGURU <br> We keep your mistakes on our records. 
+          Message from Digieyepro <br> We keep your mistakes on our records. 
         </p>
         <p style="font-size: clamp(15px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px;line-height: 30px; font-weight: 500; color: #f2ff01;">
          
          Please Check Your Internet Connection.
         </p>
         <p class="d-none d-md-block" style="font-size: clamp(15px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px; line-height: 30px;">          
-          Please share a screenshot to OPTICALGURU Team <br> Thankyou.
+          Please share a screenshot to Digieyepro Team <br> Thankyou.
         </p>
         <p class="d-block d-md-none" style="font-size: clamp(18px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px; line-height: 30px;">          
-          Please share a screenshot to <br> OPTICALGURU Team Thankyou.
+          Please share a screenshot to <br> Digieyepro Team Thankyou.
         </p>
         <div class="buttons-con">
           <div class="action-link-wrap">
