--- a/digi/web/src/app/common/about/about.component.html
+++ b/digi/web/src/app/common/about/about.component.html
@@ -7,7 +7,7 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-12 p-0 ps-3 mb-5 mb-md-1">
-                                    <h2 >Opticalguru New Updates (Your Software Up To Date) </h2>
+                                    <h2 >Digieyepro New Updates (Your Software Up To Date) </h2>
                                 </div>
                             </div>
                         </div>
