--- a/digi/web/src/app/admin/user-update-password/user-update-password.component.html
+++ b/digi/web/src/app/admin/user-update-password/user-update-password.component.html
@@ -41,15 +41,15 @@
                             <div class="col-xl-3 col-lg-4 col-md-6" *ngFor="let data of dataList let i = index;">
                                 <div class="course-card" style="height: 28rem;">
                                     <div class="course-card-body">
-                                        <div class="course-card-top-overflow text-white">
+                                        <div *ngIf="data.Email != 'relinksys@gmail.com'" class="course-card-top-overflow text-white">
                                             <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
                                         </div>
-                                        <h2 class="text-center m-0">{{data.Name}}</h2>
-                                        <p class="text-center m-0">{{data.OwnerName}}</p>
-                                        <p class="text-center m-0">{{data.MobileNo1}}</p>
-                                        <p class="text-center m-0">{{data.Email}}</p>
-                                        <p class="text-center m-0">{{data.CancellationDate }}</p>
-                                        <div class="text-center mb-3 mt-2">
+                                        <h2 *ngIf="data.Email != 'relinksys@gmail.com'" class="text-center m-0">{{data.Name}}</h2>
+                                        <p *ngIf="data.Email != 'relinksys@gmail.com'" class="text-center m-0">{{data.OwnerName}}</p>
+                                        <p *ngIf="data.Email != 'relinksys@gmail.com'" class="text-center m-0">{{data.MobileNo1}}</p>
+                                        <p *ngIf="data.Email != 'relinksys@gmail.com'" class="text-center m-0">{{data.Email}}</p>
+                                        <p *ngIf="data.Email != 'relinksys@gmail.com'" class="text-center m-0">{{data.CancellationDate }}</p>
+                                        <div *ngIf="data.Email != 'relinksys@gmail.com'" class="text-center mb-3 mt-2">
                                             <button mat-raised-button color="primary"
                                             (click)="openModal(content,data)" >
                                                Password Update
@@ -84,22 +84,22 @@
                                     </thead>
                                     <tbody>
                                         <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
-                                            <td>
+                                            <td *ngIf="data.Email != 'relinksys@gmail.com'">
                                                 <i class="fas fa-info-circle"
                                                     style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"
                                                     data-mdb-toggle="modal" data-mdb-target="#exampleModal"
                                                     (click)="openModal(content,data)">
                                                 </i>
                                             </td>
-                                            <td class="text-left">{{dataList.length - i }}</td>
-                                            <td class="text-left">{{data.CompanyID}}</td>
-                                            <td class="text-left">{{data.Name}}</td>
-                                            <td class="text-left">{{data.MobileNo1 }}</td>
-                                            <td class="text-left">{{data.MobileNo2}}</td>
-                                            <td class="text-left">{{data.Email }}</td>
-                                            <td class="text-left w-25">{{data.Address }}</td>
-                                            <td class="text-left">{{data.Branch}}</td>
-                                            <td class="text-left">{{data.UserGroup}}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{dataList.length - i }}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.CompanyID}}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.Name}}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.MobileNo1 }}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.MobileNo2}}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.Email }}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left w-25">{{data.Address }}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.Branch}}</td>
+                                            <td  *ngIf="data.Email != 'relinksys@gmail.com'" class="text-left">{{data.UserGroup}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
