--- a/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
+++ b/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
@@ -137,7 +137,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Available</mat-label>
                                         <input matInput name="BarCodeCount"  [(ngModel)]="xferItem.BarCodeCount" type="number" min="0" disabled
-                                           >
+                                        #BarCodeCountControl  >
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
