--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3256,6 +3256,9 @@
                                                     </table>
                                                 </div>
                                             </div>
+                                             <div class="col-xl-12">
+
+                                             </div>
                                         </div>
                                     </div>
                                 </div>
