--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -2087,8 +2087,8 @@
                                             <div class="col-md-5 col-12">
                                                 <div class="row ">
                                                     <div class="col-md-7 col-12 p-0">
-                                                        <textarea name="Remark" id="" rows="5"
-                                                            style=" height: 100%; width:100%">
+                                                        <textarea name="Remark" rows="5"
+                                                            style="height:100%; width:100%">
                                                             {{this.data.Remarks}}
                                                          </textarea>
                                                     </div>
@@ -2879,8 +2879,8 @@
                                                 <div class="col-md-5 col-12">
                                                     <div class="row ">
                                                         <div class="col-md-7 col-12 p-0">
-                                                            <textarea name="Remark" id="" rows="5"
-                                                                style=" height: 100%; width:100%">
+                                                            <textarea name="Remark"  rows="5"
+                                                                style=" height:100%; width:100%">
                                                                 {{this.data.Remarks}}
                                                              </textarea>
                                                         </div>
@@ -3373,8 +3373,8 @@
                                             <div class="col-md-5 col-12">
                                                 <div class="row ">
                                                     <div class="col-md-7 col-12 p-0">
-                                                        <textarea name="Remark" id="" rows="5"
-                                                            style=" height: 100%; width:100%">
+                                                        <textarea name="Remark"  rows="5"
+                                                            style="height: 100%; width:100%">
                                                             {{this.data.Remarks}}
                                                          </textarea>
                                                     </div>
